--- a/package.json
+++ b/package.json
@@ -39,5 +39,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "overrides": {
+    "react-scripts": {
+      "typescript": "^5.8.3",
+      "react": "^19.1.0",
+      "react-dom": "^19.1.0"
+    }
   }
 }
